swim_common/src/form/tests/derive/form/incorrect_rename_type.stderr
error: Expected string argument
  --> $DIR/incorrect_rename_type.rs:20:16
   |
20 |         #[form(name = 13)]
   |                ^^^^^^^^^
